Algumas alterações, Em breve terá mais...

--- a/Aplicativo Primeiro/www/index.html
+++ b/Aplicativo Primeiro/www/index.html
@@ -133,7 +133,7 @@
       <button class="btn widget uib_w_18 d-margins TamanhoSobre btn-danger" data-uib="twitter%20bootstrap/button" data-ver="1">Voltar</button>
       <button class="btn widget uib_w_16 d-margins TamanhoSair MargemSair btn-danger" data-uib="twitter%20bootstrap/button" data-ver="1">Excluir Conta</button>
     </div>
-    <div class="upage vertical-col left hidden" id="RegistrarOcorencia">
+    <div class="upage vertical-col left hidden" id="RegistrarOcorrencia">
       <div class="tarea widget uib_w_25 d-margins" data-uib="media/text" data-ver="0" name="uib_w_25" id="txtoc">
         <div class="widget-container left-receptacle"></div>
         <div class="widget-container right-receptacle"></div>
