Mais alterações do banco. tá indo bacana agora...

--- a/Aplicativo Primeiro/www/index.html
+++ b/Aplicativo Primeiro/www/index.html
@@ -144,6 +144,7 @@
       <div class="table-thing widget uib_w_26 d-margins tamanhocaixatexto" data-uib="twitter%20bootstrap/select" data-ver="1">
         <label class="narrow-control label-top-left">Tipo de Ocorrência</label>
         <select class="wide-control form-control default" id="tipooc">
+          <option>Selecione:</option>
           <option>Roubo</option>
           <option>Furto</option>
           <option>Homicídio</option>
