Nova Atualização do Appost - Aula 01/04

--- a/Aplicativo Primeiro/www/index.html
+++ b/Aplicativo Primeiro/www/index.html
@@ -286,14 +286,23 @@
           <h2>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Sobre</h2>
         </div>
       </div>
-      <div class="tarea widget uib_w_35 d-margins" data-uib="media/text" data-ver="0" name="uib_w_35">
-        <div class="widget-container left-receptacle"></div>
-        <div class="widget-container right-receptacle"></div>
-        <div class="text-container">
-          <p>O Appost (Aplicativo Policiamento Ostensivo) foi originado inicialmente através de um trabalho acadêmico em uma disciplina no Curso de Sistemas de Informação turma de 2013 vespertino Campus Castanhal UFPA. A equipe desenvolvedora é formada por
-            7 integrantes, sendo eles: Allan Teixeira, Ana Naiane, Brendo Ramos, Duellyhermenson Menezes, Felipe Fonseca, Karla Lima e Laryssa Magno, supervisionada pelo Professor Doutor Adailton Magalhães Lima.</p>
+      <div class="grid grid-pad urow uib_row_14 row-height-14" data-uib="layout/row" data-ver="0">
+        <div class="col uib_col_17 col-0_12-12" data-uib="layout/col" data-ver="0">
+          <div class="widget-container content-area vertical-col">
+            <div class="tarea widget uib_w_144 d-margins" data-uib="media/text" data-ver="0" name="uib_w_144">
+              <div class="widget-container left-receptacle"></div>
+              <div class="widget-container right-receptacle"></div>
+              <div class="text-container">
+                <p>O Appost (Aplicativo Policiamento Ostensivo) foi originado inicialmente através de um trabalho acadêmico em uma disciplina no Curso de Sistemas de Informação turma de 2013 vespertino Campus Castanhal UFPA. A equipe desenvolvedora é formada
+                  por 7 integrantes, sendo eles: Allan Teixeira, Ana Naiane, Brendo Ramos, Duellyhermenson Menezes, Felipe Fonseca, Karla Lima e Laryssa Magno, supervisionada pelo Professor Doutor Adailton Magalhães Lima.</p>
+              </div>
+            </div>
+            <span class="uib_shim"></span>
+          </div>
         </div>
+        <span class="uib_shim"></span>
       </div>
+
       <button class="btn widget uib_w_36 TamanhoSobre MargemSair btn-danger" data-uib="twitter%20bootstrap/button" data-ver="1">Voltar</button>
     </div>
     <div class="upage vertical-col left hidden" id="historico">
