--- a/Appost/www/index.html
+++ b/Appost/www/index.html
@@ -52,7 +52,7 @@
           <div class="widget-container content-area vertical-col center">
             <div class="widget uib_w_73 scale-image d-margins" data-uib="media/img" data-ver="0">
               <figure class="figure-align">
-                <img src="gallery_images/logo 2.jpg">
+                <img src="gallery_images/logo_2.jpg">
 
                 <figcaption data-position="bottom"></figcaption>
               </figure>
@@ -83,7 +83,8 @@
           <div class="widget-container content-area vertical-col center">
             <div class="widget uib_w_81 scale-image d-margins" data-uib="media/img" data-ver="0">
               <figure class="figure-align">
-                <img src="gallery_images/logo 2.jpg">
+                <img src="gallery_images/logo_2.jpg">
+
                 <figcaption data-position="bottom"></figcaption>
               </figure>
             </div>
@@ -263,7 +264,8 @@
           <div class="widget-container content-area vertical-col">
             <div class="widget uib_w_88 scale-image d-margins" data-uib="media/img" data-ver="0">
               <figure class="figure-align">
-                <img src="gallery_images/logo 2.jpg">
+                <img src="gallery_images/logo_2.jpg">
+
                 <figcaption data-position="bottom"></figcaption>
               </figure>
             </div>
